# CloverDrone

./: .gitignore  .gitmodules  README.md  config.ini  config.txt  run_to_access_resources.sh  source_to_build.sh  source_to_configure_ros.sh
cloverdrone/: CMakeLists.txt
cloverdrone/include/: actuators.h  configuration.h  controller.h  interfaces.h  sensors.h  stability_controller.h  utils.h
cloverdrone/include/HAL/: gpio_access.h  hardware_communication.h  pca9685.h  rc_interface.h
cloverdrone/src/: actuators.cpp  configuration.cpp  controller.cpp  interfaces.cpp  main.cpp  sensors.cpp  stability_controller.cpp  utils.cpp
cloverdrone/src/HAL/: gpio_access.cpp  hardware_communication.cpp  pca9685.cpp  rc_interface.cpp
cloverdrone_ros_ws/src/cloverdrone_ros/: CMakeLists.txt  package.xml
cloverdrone_ros_ws/src/cloverdrone_ros/configurations/: RTIMULib.ini  config.txt  config_npiduo.ini  config_rpi2.ini
cloverdrone_ros_ws/src/cloverdrone_ros/include/: interfacesROS.h  ros_interface.h
cloverdrone_ros_ws/src/cloverdrone_ros/src/: interfacesROS.cpp  main.cpp  ros_interface.cpp
cloverdrone_ros_ws/src/cloverdrone_ros_msgs/: CMakeLists.txt  package.xml
cloverdrone_ros_ws/src/cloverdrone_ros_msgs/msg/: DroneStatus.msg  DroneTarget.msg
hardware_files/: 50-ttyusb.rules  999-perif-i2c-spi-serial-gpio.rules.copy
