<package format="2">
  <name>cloverdrone_ros</name>
  <version>2.0.0</version>
  <description>
     A ROS package to use the cloverdrone library
  </description>
  <author email="abhijit.g.majumdar@gmail.com">Abhijit Majumdar</author>
  <maintainer email="abhijit.g.majumdar@gmail.com">Abhijit Majumdar</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>cloverdrone_ros_msgs</depend>
</package>
