<package format="2">
  <name>cloverdrone_ros_msgs</name>
  <version>2.0.0</version>
  <description>
     ROS messages used to interface with the cloverdrone_ros package
  </description>
  <author email="abhijit.g.majumdar@gmail.com">Abhijit Majumdar</author>
  <maintainer email="abhijit.g.majumdar@gmail.com">Abhijit Majumdar</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
